fix css files names

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <link href="https://cloud.tui.com/ui/ui-assets/v1/favicons/favicon.svg" rel="thumbnail" type="image/svg+xml">
   <link href="https://cloud.tui.com/ui/ui-assets/v1/favicons/favicon.ico" rel="alternate icon">
   <link href="https://cloud.tui.com/ui/ui-assets/v1/favicons/safari-pinned-tab.svg" rel="mask-icon" color="#D40E14">
-  <link rel="stylesheet" type="text/css" href="css/critical.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="css/critical.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
