fix css structure

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link color="#D40E14" href="https://cloud.tui.com/ui/ui-assets/v1/favicons/safari-pinned-tab.svg" rel="mask-icon">
   <link href="css/main.css" rel="stylesheet" type="text/css">
   <link href="css/common.css" rel="stylesheet" type="text/css">
+  <link href="css/media.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
 
@@ -216,7 +217,7 @@
   </section>
   <section class="section">
     <div class="container container_small">
-      <h2 class="section-title" id="1">
+      <h2 class="section-title" id="effekte-des-reisens-auf-die-mentale-gesundheit">
         Urlaub gut, Psyche gut? Effekte des Reisens auf die mentale Gesundheit
       </h2>
       <p>Von Stress über Burnout bis hin zur Depression: Mentale Gesundheit ist schon lange kein Randthema mehr. Über 15
@@ -454,7 +455,7 @@
   </section>
   <section class="section section-gradient">
     <div class="container container_small">
-      <h2 class="section-title">
+      <h2 class="section-title" id="so-erholen-sich-die-deutschen">
         Erholungsgarant Sommerurlaub: So gut schalten die Deutschen ab
       </h2>
       <p>
@@ -517,7 +518,7 @@
   </section>
   <section class="section section-gradient section-background">
     <div class="container container_small">
-      <h2 class="section-title">
+      <h2 class="section-title" id="urlaub-im-blauen">
         Urlaub am Meer, See und Fluss: So holt uns Europas Blau aus dem Blues
       </h2>
       <p>
@@ -583,7 +584,7 @@
   </section>
   <section class="section section-white">
     <div class="container container_small">
-      <h2 class="section-title">
+      <h2 class="section-title" id="urlaub-im-grünen">
         Grün, Grün, Grün ist alles was ich brauche: Waldbaden und Park-Spaziergänge für den inneren Frieden
       </h2>
       <p>
